# MHMS_DEEPLEARNING

./: .project  .replit  pyproject.toml
code/: .data_loaders_csv.py.swp  array.txt  dataCNN.csv  dataLSTM.csv  dataRF.csv  data_loaders.py  data_loaders_csv.py  dl_models.py  feature_extract.py  feature_extract_copy.py  feature_extract_with_2.py  main_test.py  main_test10.py  main_test11.py  main_test12.py  main_test12_sumon.py  main_test12_sumon_copy.py  main_test13.py  main_test2.py  main_test3.py  main_test4.py  main_test5.py  main_test6.py  main_test7.py  main_test8.py  main_test8_backup.py  main_test9.py  main_testBackup.py  nohup.out  normal_models.py  normal_models2.py  pickletocsv.py  requirements.txt
code/dbn/: models.py
code/outputcsv/: Meural.csv  dataRF.csv  linear.csv
data/: XTest_Only_feature.csv  XTrain_17_04.csv  XTrain_Only_feature.csv  X_Test3.csv  X_Train.csv  Xtest_17_04.csv  YTrain_17_04.csv  Y_Train.csv  data.csv
data/29-04/: X_Test.csv  X_Train.csv  Y_Train.csv
data/brady/: X_Test7.4.csv  X_Test7.5.csv  X_Test7.6.csv  X_Test7.7.csv  X_Test7.8.csv  X_Test7.9.csv  X_Train7.2.csv  X_Train7.3.csv  Y_Test7.4.csv  Y_Test7.7.csv  Y_Train7.3.csv
data/sumon/: X_Test1_rms.csv  X_Train1_rms.csv  Y_Test.csv  Y_Train.csv
data/sumon/1805/: X_Test.csv  X_Train.csv  Y_Test.csv
