
[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Sumon Sadhukhan <sumon.sadhukhan10@gmail.com>"]
description = ""
name = "mhmsdeeplearning"
version = "0.1.0"
[tool.poetry.dependencies]
Keras = "^2.3"
PyWavelets = "^1.1"
PyYAML = "^5.3"
python = "^3.7"
scipy = "^1.4"
sklearn = "^0.0.0"
tensorflow ="2.2.0rc2"
[tool.poetry.dev-dependencies]
